@@ -39,6 +39,7 @@
 
 package org.openflexo.swing;
 
+import java.awt.AlphaComposite;
 /**
  * Widget allowing to edit a date with a calendar popup
  * 
@@ -48,11 +49,17 @@ package org.openflexo.swing;
 import java.awt.BorderLayout;
 import java.awt.Color;
 import java.awt.Dimension;
+import java.awt.FlowLayout;
 import java.awt.Font;
+import java.awt.Graphics;
+import java.awt.Graphics2D;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
+import java.awt.RenderingHints;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.MouseAdapter;
+import java.awt.event.MouseEvent;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
 import java.util.Date;
@@ -62,6 +69,7 @@ import javax.swing.BorderFactory;
 import javax.swing.Box;
 import javax.swing.JButton;
 import javax.swing.JComboBox;
+import javax.swing.JFrame;
 import javax.swing.JLabel;
 import javax.swing.JPanel;
 import javax.swing.JSpinner;
@@ -70,12 +78,44 @@ import javax.swing.SwingConstants;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 
+import org.openflexo.icon.ImageIconResource;
+import org.openflexo.localization.FlexoLocalization;
+import org.openflexo.localization.Language;
+import org.openflexo.localization.LocalizedDelegate;
+import org.openflexo.localization.LocalizedDelegateImpl;
+import org.openflexo.rm.ResourceLocator;
+
 public class DateSelector extends TextFieldCustomPopup<Date> {
+
+	public static LocalizedDelegate DATE_LOCALIZATION = new LocalizedDelegateImpl(
+			ResourceLocator.locateResource("Localization/DateSelector"), null, true, true);
+
+	public static final ImageIconResource DECREASE_YEAR_SELECTED_ICON = new ImageIconResource(
+			ResourceLocator.locateResource("Icons/DateSelector/DecreaseYearSelected.png"));
+	public static final ImageIconResource INCREASE_YEAR_SELECTED_ICON = new ImageIconResource(
+			ResourceLocator.locateResource("Icons/DateSelector/IncreaseYearSelected.png"));
+	public static final ImageIconResource DECREASE_YEAR_ICON = new ImageIconResource(
+			ResourceLocator.locateResource("Icons/DateSelector/DecreaseYear.png"));
+	public static final ImageIconResource INCREASE_YEAR_ICON = new ImageIconResource(
+			ResourceLocator.locateResource("Icons/DateSelector/IncreaseYear.png"));
+	public static final ImageIconResource DECREASE_MONTH_SELECTED_ICON = new ImageIconResource(
+			ResourceLocator.locateResource("Icons/DateSelector/DecreaseMonthSelected.png"));
+	public static final ImageIconResource INCREASE_MONTH_SELECTED_ICON = new ImageIconResource(
+			ResourceLocator.locateResource("Icons/DateSelector/IncreaseMonthSelected.png"));
+	public static final ImageIconResource DECREASE_MONTH_ICON = new ImageIconResource(
+			ResourceLocator.locateResource("Icons/DateSelector/DecreaseMonth.png"));
+	public static final ImageIconResource INCREASE_MONTH_ICON = new ImageIconResource(
+			ResourceLocator.locateResource("Icons/DateSelector/IncreaseMonth.png"));
+	public static final ImageIconResource SELECTED_DATE_ICON = new ImageIconResource(
+			ResourceLocator.locateResource("Icons/DateSelector/SelectedDate.png"));
+
 	public static final Font NORMAL_FONT = new Font("SansSerif", Font.PLAIN, 11);
+	public static final Font DAY_FONT = new Font("SansSerif", Font.PLAIN, 11);
 
 	static final String[] days = { "Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat" };
 
-	static final String[] months = { "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec", };
+	static final String[] months = { "January", "February", "March", "April", "May", "June", "July", "August", "September", "October",
+			"November", "December", };
 
 	private Calendar _cal;
 
@@ -106,6 +146,7 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 	@Override
 	protected ResizablePanel createCustomPanel(Date editedObject) {
 		calendarPanel = new CalendarPanel();
+		calendarPanel.update();
 		return calendarPanel;
 	}
 
@@ -116,10 +157,10 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 
 	@Override
 	public void setEditedObject(Date object) {
-		super.setEditedObject(object);
 		if (object != null) {
 			getCalendar().setTime(object);
 		}
+		super.setEditedObject(object);
 	}
 
 	/**
@@ -156,7 +197,7 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 		if (formatter == null) {
 			formatter = new SimpleDateFormat();
 		}
-		formatter.applyPattern("MMMM d, yyyy");
+		formatter.applyPattern(DATE_LOCALIZATION.localizedForKey("MMMM d, yyyy"));
 		return formatter.format(getDate());
 	}
 
@@ -164,17 +205,18 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 		ButtonsControlPanel controlPanel;
 
 		private JButton prevMonth;
-
 		private JButton nextMonth;
+		private JButton prevYear;
+		private JButton nextYear;
 
-		JComboBox monthComboBox;
+		JComboBox<String> monthComboBox;
 
 		JSpinner yearSpinner;
 
 		private JPanel dayButtons;
 
 		void update() {
-			yearSpinner.setValue(new Integer(getCalendar().get(Calendar.YEAR)));
+			yearSpinner.setValue(Integer.valueOf(getCalendar().get(Calendar.YEAR)));
 			monthComboBox.setSelectedIndex(getCalendar().get(Calendar.MONTH));
 			rebuildDayButtons();
 		}
@@ -183,7 +225,11 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 			super();
 
 			// Create the month chooser as a comboBox
-			monthComboBox = new JComboBox(months);
+			String[] localizedMonths = new String[12];
+			for (int i = 0; i < 12; i++) {
+				localizedMonths[i] = DATE_LOCALIZATION.localizedForKey(months[i]);
+			}
+			monthComboBox = new JComboBox<>(localizedMonths);
 			monthComboBox.setLightWeightPopupEnabled(false);
 			monthComboBox.addActionListener(new ActionListener() {
 				@Override
@@ -212,8 +258,19 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 				}
 			});
 			// Create next/prev buttons
-			prevMonth = new JButton("<");
-			nextMonth = new JButton(">");
+			prevMonth = new JButton(DECREASE_MONTH_SELECTED_ICON);
+			prevMonth.setRolloverIcon(DECREASE_MONTH_ICON);
+			prevMonth.setBorder(null);
+			nextMonth = new JButton(INCREASE_MONTH_SELECTED_ICON);
+			nextMonth.setRolloverIcon(INCREASE_MONTH_ICON);
+			nextMonth.setBorder(null);
+			prevYear = new JButton(DECREASE_YEAR_SELECTED_ICON);
+			prevYear.setRolloverIcon(DECREASE_YEAR_ICON);
+			prevYear.setBorder(null);
+			nextYear = new JButton(INCREASE_YEAR_SELECTED_ICON);
+			nextYear.setRolloverIcon(INCREASE_YEAR_ICON);
+			nextYear.setBorder(null);
+
 			// setup actionlisteners
 			prevMonth.addActionListener(new ActionListener() {
 				@Override
@@ -229,19 +286,48 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 					fireEditedObjectChanged();
 				}
 			});
+			prevYear.addActionListener(new ActionListener() {
+				@Override
+				public void actionPerformed(ActionEvent e) {
+					getCalendar().add(Calendar.YEAR, -1);
+					fireEditedObjectChanged();
+				}
+			});
+			nextYear.addActionListener(new ActionListener() {
+				@Override
+				public void actionPerformed(ActionEvent e) {
+					getCalendar().add(Calendar.YEAR, 1);
+					fireEditedObjectChanged();
+				}
+			});
 
 			// Build the calendar Panel
 			setLayout(new BorderLayout());
 
 			// Build the month / year selectors
-			JPanel monthPanel = new JPanel(new BorderLayout());
-			JPanel choosersPanel = new JPanel();
+			JPanel topPanel = new JPanel(new BorderLayout());
+
+			JPanel decreasePanel = new JPanel(new FlowLayout(FlowLayout.CENTER, 5, 10));
+			decreasePanel.add(prevYear);
+			decreasePanel.add(prevMonth);
+			decreasePanel.setOpaque(true);
+			decreasePanel.setBackground(new Color(220, 220, 230));
+			JPanel increasePanel = new JPanel(new FlowLayout(FlowLayout.CENTER, 5, 10));
+			increasePanel.add(nextMonth);
+			increasePanel.add(nextYear);
+			increasePanel.setOpaque(true);
+			increasePanel.setBackground(new Color(220, 220, 230));
+
+			JPanel choosersPanel = new JPanel(new FlowLayout());
 			choosersPanel.add(monthComboBox);
 			choosersPanel.add(yearSpinner);
-			monthPanel.add(prevMonth, BorderLayout.WEST);
-			monthPanel.add(choosersPanel, BorderLayout.CENTER);
-			monthPanel.add(nextMonth, BorderLayout.EAST);
-			add(monthPanel, BorderLayout.NORTH);
+			choosersPanel.setOpaque(true);
+			choosersPanel.setBackground(new Color(220, 220, 230));
+
+			topPanel.add(decreasePanel, BorderLayout.WEST);
+			topPanel.add(choosersPanel, BorderLayout.CENTER);
+			topPanel.add(increasePanel, BorderLayout.EAST);
+			add(topPanel, BorderLayout.NORTH);
 
 			calendarPanel = this;
 
@@ -318,33 +404,33 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 			// today
 			// is
 			{
-			case Calendar.SUNDAY:
-				dayOfWeek = 0;
-				break;
-			case Calendar.MONDAY:
-				dayOfWeek = 1;
-				break;
-			case Calendar.TUESDAY:
-				dayOfWeek = 2;
-				break;
-			case Calendar.WEDNESDAY:
-				dayOfWeek = 3;
-				break;
-			case Calendar.THURSDAY:
-				dayOfWeek = 4;
-				break;
-			case Calendar.FRIDAY:
-				dayOfWeek = 5;
-				break;
-			case Calendar.SATURDAY:
-				dayOfWeek = 6;
-				break;
+				case Calendar.SUNDAY:
+					dayOfWeek = 0;
+					break;
+				case Calendar.MONDAY:
+					dayOfWeek = 1;
+					break;
+				case Calendar.TUESDAY:
+					dayOfWeek = 2;
+					break;
+				case Calendar.WEDNESDAY:
+					dayOfWeek = 3;
+					break;
+				case Calendar.THURSDAY:
+					dayOfWeek = 4;
+					break;
+				case Calendar.FRIDAY:
+					dayOfWeek = 5;
+					break;
+				case Calendar.SATURDAY:
+					dayOfWeek = 6;
+					break;
 			}
 
 			for (int i = 0; i < 7; i++) {
 				c.gridx = i;
-				JLabel l = new JLabel(days[i], SwingConstants.CENTER);
-				l.setBorder(BorderFactory.createEmptyBorder(5, 15, 5, 15));
+				JLabel l = new JLabel(DATE_LOCALIZATION.localizedForKey(days[i]), SwingConstants.CENTER);
+				l.setBorder(BorderFactory.createEmptyBorder(5, 5, 5, 5));
 				// Make the Day of the week bold if it is today
 				if (i == dayOfWeek && getCalendar().get(Calendar.YEAR) == Calendar.getInstance().get(Calendar.YEAR)
 						&& getCalendar().get(Calendar.MONTH) == Calendar.getInstance().get(Calendar.MONTH)) {
@@ -373,7 +459,7 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 				b.addActionListener(new ActionListener() {
 					@Override
 					public void actionPerformed(ActionEvent e) {
-						getCalendar().setTime(((DateButton) e.getSource()).getDate());
+						getCalendar().setTime(((DateButton) e.getSource()).getCalendar().getTime());
 						fireEditedObjectChanged();
 					}
 				});
@@ -382,7 +468,7 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 
 			if (c.gridy < 6) {
 				c.gridy = 6;
-				dayButtons.add(Box.createRigidArea(new Dimension(25, 20)), c);
+				dayButtons.add(Box.createRigidArea(new Dimension(20, 20)), c);
 			}
 
 			calendarPanel.validate();
@@ -394,63 +480,129 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 		 */
 		private class DateButton extends JButton {
 
-			private boolean selectedDay = false;
+			private boolean workingDay = true;
+			private boolean focused = false;
 
-			private boolean busy = false; // any events occuring today?
-
-			private Date date = new Date();
+			private Calendar cal;
 
 			public DateButton(Calendar cal) {
 				super("");
-				date = cal.getTime(); // create a date specifically for this
-				// button
+				this.cal = (Calendar) cal.clone();
 
-				setFont(NORMAL_FONT);
+				setFont(DAY_FONT);
+				setBorder(BorderFactory.createEmptyBorder(0, 0, 0, 0));
+				setOpaque(true);
+				setBackground(Color.white);
 
 				// If this button represents today, set appropriate status.
 				// comaparing dates doesnt work since those are only equal if
 				// they match upto the millisecond.
-				if (cal.get(Calendar.DAY_OF_YEAR) == Calendar.getInstance().get(Calendar.DAY_OF_YEAR)
-						&& cal.get(Calendar.YEAR) == Calendar.getInstance().get(Calendar.YEAR)) {
-					setFont(getFont().deriveFont(Font.BOLD));
-				}
+
+				/*System.out.println("date.getDay" + date.getDay());
+				if (Integer.toString(cal.get(Calendar.DAY_OF_MONTH)).equals("12")) {
+					System.out.println("Hop pour le 12");
+					setIcon(SELECTED_DATE_ICON);
+					setB
+				}*/
 
 				setText(Integer.toString(cal.get(Calendar.DAY_OF_MONTH)));
-				setForeground(Color.BLUE);
-				setPreferredSize(new Dimension(30, 20));
+
+				setPreferredSize(new Dimension(25, 25));
 				setMinimumSize(getPreferredSize());
 				setMaximumSize(getPreferredSize());
+
+				addMouseListener(new MouseAdapter() {
+					@Override
+					public void mouseEntered(MouseEvent e) {
+						super.mouseEntered(e);
+						focused = true;
+						repaint();
+					}
+
+					@Override
+					public void mouseExited(MouseEvent e) {
+						super.mouseExited(e);
+						focused = false;
+						repaint();
+					}
+				});
 			}
 
-			public void setDateStyle() {
-				if (selectedDay) {
-					setBackground(Color.GREEN);
-				} else if (busy) {
-					setBackground(Color.GRAY);
-				} else {
-					setBackground(Color.YELLOW);
+			public Calendar getCalendar() {
+				return cal;
+			}
+
+			private void updateGraphicalProperties() {
+
+				if (cal.get(Calendar.DAY_OF_YEAR) == Calendar.getInstance().get(Calendar.DAY_OF_YEAR)
+						&& cal.get(Calendar.YEAR) == Calendar.getInstance().get(Calendar.YEAR)) {
+					setFont(DAY_FONT.deriveFont(Font.BOLD));
+					setBackground(new Color(240, 240, 255));
+					setForeground(Color.BLACK);
+				}
+				else {
+					setBackground(Color.WHITE);
+					if (isSelectedDay()) {
+						setFont(DAY_FONT.deriveFont(Font.BOLD));
+						setForeground(Color.BLACK);
+					}
+					else if (isWorkingDay()) {
+						setFont(DAY_FONT);
+						setForeground(Color.BLACK);
+					}
+					else {
+						setFont(DAY_FONT);
+						setForeground(Color.GRAY);
+					}
 				}
 			}
 
-			public Date getDate() {
-				return date;
+			@Override
+			protected void paintComponent(Graphics g) {
+				updateGraphicalProperties();
+				Graphics2D g2 = (Graphics2D) g;
+				if (isSelectedDay() || focused) {
+					g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
+					float alpha = 0.4f;
+					int type = AlphaComposite.SRC_OVER;
+					// Unused Composite oldComposite = g2.getComposite();
+					AlphaComposite composite = AlphaComposite.getInstance(type, alpha);
+					g2.setComposite(composite);
+					g2.drawImage(SELECTED_DATE_ICON.getImage(), (getSize().width - 25) / 2 + 1, (getSize().height - 25) / 2 - 1, null);
+					// alpha = 0.5f;
+					// type = AlphaComposite.DST_OVER;
+					// composite = AlphaComposite.getInstance(type, alpha);
+					g2.setComposite(composite);
+
+					super.paintComponent(g);
+
+					// g2.setComposite(oldComposite);
+
+				}
+				else {
+					super.paintComponent(g);
+				}
+				/*g2.setColor(Color.darkGray);
+				g2.setStroke(new BasicStroke(0.5f));
+				g2.drawLine(0, 0, 0, getSize().height);*/
+
 			}
 
-			public boolean isBusy() {
-				return busy;
-			}
-
-			public void setBusy(boolean b) {
-				this.busy = b;
+			public boolean isWorkingDay() {
+				if (getCalendar().get(Calendar.DAY_OF_WEEK) == 1 || getCalendar().get(Calendar.DAY_OF_WEEK) == 7) {
+					return false;
+				}
+				return workingDay;
 			}
 
 			public boolean isSelectedDay() {
-				return selectedDay;
+				return DateSelector.this.getCalendar().get(Calendar.DAY_OF_YEAR) == getCalendar().get(Calendar.DAY_OF_YEAR)
+						&& DateSelector.this.getCalendar().get(Calendar.YEAR) == getCalendar().get(Calendar.YEAR);
 			}
 
-			public void setSelectedDay(boolean selected) {
+			/*public void setSelectedDay(boolean selected) {
 				this.selectedDay = selected;
-			}
+			}*/
 
 		}
 
@@ -458,6 +610,7 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 
 	@Override
 	public void apply() {
+		System.out.println("On fait apply dans DateSelector avec " + getEditedObject());
 		setRevertValue(getEditedObject());
 		closePopup();
 		super.apply();
@@ -490,6 +643,18 @@ public class DateSelector extends TextFieldCustomPopup<Date> {
 	// Override if required
 	public String localizedForKeyAndButton(String key, JButton component) {
 		return key;
+	}
+
+	public static void main(String[] args) {
+		FlexoLocalization.setCurrentLanguage(Language.FRENCH);
+		System.out.println("language: " + FlexoLocalization.getCurrentLanguage());
+		JFrame frame = new JFrame();
+		frame.getContentPane().setLayout(new BorderLayout());
+		frame.getContentPane().add(new DateSelector(new Date()), BorderLayout.CENTER);
+		// frame.getContentPane().setPreferredSize(new Dimension(200, 20));
+		frame.validate();
+		frame.pack();
+		frame.setVisible(true);
 	}
 
 }
